Update FileSystemTests.java