@@ -5,6 +5,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
 import org.junit.jupiter.api.Test;
 
 public class FileSystemTests {
@@ -12,9 +14,12 @@ public class FileSystemTests {
   private final MyFileSystemRunner runner = new MyFileSystemRunner();
 
   private void executeTest(List<Map.Entry<String, String>> commandsAndResults) {
-    final List<String> commands = commandsAndResults.stream().map(Map.Entry::getKey).toList();
-    final List<String> expectedResult =
-        commandsAndResults.stream().map(Map.Entry::getValue).toList();
+    final List<String> commands = commandsAndResults.stream()
+            .map(Map.Entry::getKey)
+            .collect(Collectors.toList());
+    final List<String> expectedResult = commandsAndResults.stream()
+            .map(Map.Entry::getValue)
+            .collect(Collectors.toList());
 
     final List<String> actualResult = runner.executeCommands(commands);
 
